--- a/项目中期文件.md
+++ b/项目中期文件.md
@@ -11,6 +11,7 @@
   - [Sponsors](#sponsors)
   - [Competitors](#competitors)
 - [Context View](#context-view)
+- [Deployment](#deployment)
 
 ### Abstract
 &nbsp;    Electron is an open-source framework developed and maintained by GitHub. Electron allows for the development of desktop GUI applications using web technologies: It combines the Chromium rendering engine and the Node.js runtime. Electron is the main GUI framework behind several notable open-source projects including Atom, GitHub Desktop, Light Table, Visual Studio Code, and WordPress Desktop. The fact that the project is under active development can be deduced from the speed at which pull requests are merged. Until 2019-10, it has 22559 commits, 140 branches, 628 releases ,1036 issues, and 889 contributors.
@@ -70,3 +71,18 @@ We recommend that you use GitHub's Atom or Visual Studio Code. These two popular
 &nbsp;    Electron	uses Github and Git for	 version	control to help developers	collaborate and track issues related	to the software. Contributions in	the repository	 come from the Electron software development	team, as	well	as from the open-source community. In order	to stay in contact with developers and users	the community of Electron	are built.
 ### Software developed by Electron
 &nbsp;    If you can build a website, you can build a desktop application. Electron is a framework for creating native programs using Web technologies such as JavaScript, HTML and CSS. It is responsible for the more difficult parts. You just need to focus on the core of your application. With Electron, you can easily create desktop applications or ideas for your company.
+### Deployment
+#### `Install`
+```sh
+npm i electron@latest
+```
+#### `QuickStart`
+```sh
+#Clone the Quick Start repository  
+$ git clone https://github.com/electron/electron-quick-start  
+#Go into the repository  
+$ cd electron-quick-start  
+#install the dependencies and run  
+$ npm install && npm start  
+```
+
