--- a/项目中期文件.md
+++ b/项目中期文件.md
@@ -72,10 +72,60 @@ We recommend that you use GitHub's Atom or Visual Studio Code. These two popular
 ### Software developed by Electron
 &nbsp;    If you can build a website, you can build a desktop application. Electron is a framework for creating native programs using Web technologies such as JavaScript, HTML and CSS. It is responsible for the more difficult parts. You just need to focus on the core of your application. With Electron, you can easily create desktop applications or ideas for your company.
 ### Deployment
+#### `Setting up`
+```sh
+# This command should print the version of Node.js
+node -v
+
+# This command should print the version of npm
+npm -v
+```
+#### `A good Editor`
+We might suggest two free popular editors built in Electron: GitHub's Atom and Microsoft's Visual Studio Code. Both of them have excellent JavaScript support.
+
+If you are one of the many developers with a strong preference, know that virtually all code editors and IDEs these days support JavaScript.
 #### `Install`
 ```sh
 npm i electron@latest
+# or
+npm install --save-dev electron
 ```
+#### `Create Your Own Project`
+Create a new empty folder for your new Electron application. Open up your command line client and run npm init from that very folder.
+```sh
+npm init
+```
+npm will guide you through creating a basic package.json file. The script specified by the main field is the startup script of your app, which will run the main process. An example of your package.json might look like this:
+```sh
+{
+  "name": "your-app",
+  "version": "0.1.0",
+  "main": "main.js"
+}
+```
+Note: If the main field is not present in package.json, Electron will attempt to load an index.js (as Node.js does). If this was actually a simple Node application, you would add a start script that instructs node to execute the current package:
+```sh
+{
+  "name": "your-app",
+  "version": "0.1.0",
+  "main": "main.js",
+  "scripts": {
+    "start": "node ."
+  }
+}
+```
+Turning this Node application into an Electron application is quite simple - we merely replace the node runtime with the electron runtime.
+```sh
+{
+  "name": "your-app",
+  "version": "0.1.0",
+  "main": "main.js",
+  "scripts": {
+    "start": "electron ."
+  }
+}
+```
+
 #### `QuickStart`
 ```sh
 #Clone the Quick Start repository  
