--- a/项目中期文件.md
+++ b/项目中期文件.md
@@ -62,15 +62,36 @@ Learners: In the term of education, it can be used both in teaching and learning
  
 Figure 1: Electron context view 
  
-### Development tools
-&nbsp;    You can use the native Node. JS development environment to develop Electron applications. In order to build an Electron desktop development environment, you only need to install Node.js, NPM, a handy code editor, and a basic understanding of your OS command line client.
+#### `Development tools`
+You can use the native Node. JS development environment to develop Electron applications. In order to build an Electron desktop development environment, you only need to install Node.js, NPM, a handy code editor, and a basic understanding of your OS command line client.
 We recommend that you use GitHub's Atom or Visual Studio Code. These two popular editors are developed by Electron. And support for JavaScript is great.
-### Test
-&nbsp;    Electron is based on Chromium, so you need a display driver to make it work. If Chromium fails to find a display driver, Electron will fail to start, so no matter how you run it, Electron will not perform any of your tests. When testing Electron-based applications on Travis, Circle, Jenkins or similar systems, some configuration is required. Essentially, we need to use a virtual display driver.
-### Communication tools
-&nbsp;    Electron	uses Github and Git for	 version	control to help developers	collaborate and track issues related	to the software. Contributions in	the repository	 come from the Electron software development	team, as	well	as from the open-source community. In order	to stay in contact with developers and users	the community of Electron	are built.
-### Software developed by Electron
-&nbsp;    If you can build a website, you can build a desktop application. Electron is a framework for creating native programs using Web technologies such as JavaScript, HTML and CSS. It is responsible for the more difficult parts. You just need to focus on the core of your application. With Electron, you can easily create desktop applications or ideas for your company.
+#### `Test Framework`
+
+WebDriver is an open-source automatic testing tool supporting multiple browsers. 
+It provides the ability to operate web pages, user input, JavaScript execution, etc. 
+Chrome driver is an independent service that implements the connection protocol between WebDriver and chrome. 
+It was also developed by the team that developed chromium and WebDriver.
+
+#### `Communication tools`
+
+Electron	 uses Github and Git for	 version control to help developers collaborate and track issues related	to the software. Contributions in	the repository come from the Electron software development	team, as well as from the open-source community. In order	to stay in contact with developers and users	the community of Electron are built.
+
+#### `Software developed by Electron`
+If you can build a website, you can build a desktop application. Electron is a framework for creating native programs using Web technologies such as JavaScript, HTML and CSS. It is responsible for the more difficult parts. You just need to focus on the core of your application. With Electron, you can easily create desktop applications or ideas for your company.
+
+#### `Competitor`
+
+PWA can provide most of electron's main functions.
+Google, Microsoft and apple are investing heavily in PWA. Microsoft has publicly said its Microsoft team on windows is moving from electron to PWA.
+
+#### `License`
+
+MIT——Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software.
+
+#### `Dependencies`
+
+Electron works by merging chromium and node. JS into the same runtime environment and packaging them as applications under Mac, windows and Linux systems.
+
 ### Deployment
 #### `Setting up`
 ```sh
