--- a/项目中期文件.md
+++ b/项目中期文件.md
@@ -56,6 +56,30 @@ Learners: In the term of education, it can be used both in teaching and learning
 ### Competitors
 &nbsp;    Other frameworks for desktop application development, like QT, etc.
 
+### System Quality Attributes
+For this system，some quality attributes seems to be of great significance.
+
+Performance: Because this product is a framework that allows cross platform desktop application development, so the performance is very important. It must be Interface friendly and have strong functions so that it can be used to develop beautiful and powerful applications.
+
+Usability: Only if the users think this framework is easy to use will they choose the product. An easy-to-use framework is easy to focus more users, and it is also convenient to have more users and better optimization framework. On the other hand, it must have the functions that a qualified development tool should have，No programmer will tend to choose a development tool with incomplete functions.
+
+Portability: Many frameworks have the ability of cross platform development(for example, QT). Without this ability, they will not have the advantages in the market. 
+
+Power versus Interest
+We extend upon the previous classification of stakeholders to include the power and interest of the various stakeholders. We do so by means of a power interest grid, of which the result is shown below. The stakeholders are classified into 4 categories.
+
+Low power and low interest.
+In general, I think all of the above mentioned stakeholders are somewhat interested in this project. Relatively speaking, it should be that as a sponsor, there will be less specific development interest in this project, only involving investment and application. 
+
+High power and low interest.
+there are the programming languages such as HTML, CSS and JS, this group has no interest in Electron, but does have more power as the whole codebase consists of them cause they are hardly replaceable.
+
+Low power and high interest.
+Users, competitors, and contributors of Electorn are stakeholders who are greatly interested in Electorn but can hardly do something for it. Programmers that use Electorn itself or use it ,Obviously they care about how they feel about using this framework. But generally speaking, they don't have a lot of power. If this framework is going down, they will tend to choose other frameworks. From this point of view, competitors obviously want to know their competitors so as to learn from each other. Contributors are involved in the development of the project, so they are also interested in the project.
+
+High power and high interest.
+GitHub is the initiator of this development framework and provides the whole development community and communication platform. Besides, it's the core developer.(the release WG) .At the same time, they also act as reviewers, guiding the direction of the whole project.
+They both have high power and high interest.
 
 ### Context view
 &nbsp;    The diagram below in Figure 1 shows the context view of Electron. The view shows the different relations, dependencies and interactions Electron has with its environment. In this section we will provide some short explanations.
@@ -156,4 +180,46 @@ $ cd electron-quick-start
 #install the dependencies and run  
 $ npm install && npm start  
 ```
+
+### Deployment
+#### `High-level view`
+Electron apps is developed using JavaScript, and its working principle and method are the same as that of node.js.
+When users want to develop an Electron application, they should write the main.js file with electron module, which contains all the APIs and functions provided by Electron. Then, they can create the index.html they want to show. Last, they should create a new empty folder for their new electron app. And open their command line tool and run npm init from this folder. npm will help them create a package.json file. After creating and initializing main.js, index.html and package.json, they can start the newly written electron program by executing the npm start command in the root directory of the current project.
+
+#### `Codeline Organization`
+The codeline organization is the way that the source code is stored in a directory structure, managed via configuration management and how it is built and tested regularly. In an open source project, it is important to organize the source code in a way that everyone can understand it and can edit it.
+The code line organization of Electron is shown in the figure below. Following will be explanation for some parts in the structure.
+```sh
+atom/
+```
+The “app/” under “atom” is the entrance of the program. “ui/” under “browser” contains the code for user interface on different platforms. The code of realizing API in the program is in “api/” under. Code used by both the main process and the rendering process is contained in “common/”.
+```sh
+chromium_src/
+```
+The files in /chromium_src are more fragments of chrome than parts at the content level.  For example, to implement the Paper API, we need some join operations similar to the official chrome We may have built the corresponding source file as part of libcc, but most of the time we don't need all the features (some for special purpose and analysis), so we use part of its code These patches may easily exist in libcc, but the patches maintained when writing the target libcc are very small, and the change of chromium ﹣ SRC is often great In addition, please note that unlike other libcc patches we maintain, these patches cannot be pushed upstream.
+```sh
+default_app/
+```
+Code for the default page of Electron when no application is supplied.
+```sh
+lib/
+```
+Source code of JavaScript.
+```sh
+spec/
+```
+automated testing
+There are some other directory such as script, tools, vendor, etc. They have different functions. For example, “tools/” contains the scripts used in gyp files should not be called directly by users.
+
+#### `Continuous Integration`
+Electron is based on chromium, so a display driver is needed to make it work. If chromium can't find a display driver, Electron fails to start, so no matter how we run it, Electron won't perform any of our tests. When testing Electron   applications based on Travis CI, Circle CI, Jenkins, AppVeyor or similar systems, some configuration is required. Essentially, we need to use a virtual display driver.
+ Firstly, install Xvfb. This is a virtual frame buffer, which implements X11 display service protocol. All graphics operations are performed in memory, and do not need to be displayed on any screen output device. 
+Then create a virtual screen instance (Xvfb), and export the DISPLAY variable, which stores the reference of the virtual screen. Chromium in Electron will automatically find $DISPLAY, so the application doesn't need to be configured again. This step can be automated through xvfb-maybe of Paul Betts: if the system needs to, add your test command before xvfb-maybe, and then this gadgets will automatically set up xvfb. In windows or MacOS, it doesn't do anything. 
+
+#### `Testing Approach`
+Webdriver is an open-source automatic testing tool supporting multiple browsers. It provides the ability to operate web pages, user input, JavaScript execution, etc. ChromeDriver is an independent service that implements the connection protocol between WebDriver and chromium.
+Disposing Spection. Spectron is the ChromeDriver testing framework officially supported by Electron. It's built on top of WebdriverIO and helps you access the Electron API and bind ChromeDriver in your tests.
+Configuration via WebDriverJs or WebdriverIO. WebDriverJs and WebdriverIO is a node module that can be tested with WebDriver.
+Workflow. No need to recompile Electron, just put the source code of app into Electron's resource directory and start testing directly.
+
 
