--- a/项目中期文件.md
+++ b/项目中期文件.md
@@ -56,6 +56,8 @@ Learners: In the term of education, it can be used both in teaching and learning
 ### Competitors
 &nbsp;    Other frameworks for desktop application development, like QT, etc.
 
+![image](https://github.com/megumigachi/electron/blob/master/%E5%9B%BE%E7%89%87/stakeholder.png)
+
 ### System Quality Attributes
 For this system，some quality attributes seems to be of great significance.
 
