--- a/项目中期文件.md
+++ b/项目中期文件.md
@@ -56,7 +56,7 @@ Learners: In the term of education, it can be used both in teaching and learning
 ### Competitors
 &nbsp;    Other frameworks for desktop application development, like QT, etc.
 
-![image](https://github.com/megumigachi/electron/blob/master/%E5%9B%BE%E7%89%87/stakeholder.png)
+![image](https://github.com/megumigachi/electron/tree/master/%E5%9B%BE%E7%89%87/stakeholder.png)
 
 ### System Quality Attributes
 For this system，some quality attributes seems to be of great significance.
@@ -85,7 +85,7 @@ They both have high power and high interest.
 
 ### Context view
 &nbsp;    The diagram below in Figure 1 shows the context view of Electron. The view shows the different relations, dependencies and interactions Electron has with its environment. In this section we will provide some short explanations.
- 
+ ![image](https://github.com/megumigachi/electron/tree/master/%E5%9B%BE%E7%89%87/context.png)
 Figure 1: Electron context view 
  
 #### `Development tools`
@@ -187,7 +187,7 @@ $ npm install && npm start
 #### `High-level view`
 Electron apps is developed using JavaScript, and its working principle and method are the same as that of node.js.
 When users want to develop an Electron application, they should write the main.js file with electron module, which contains all the APIs and functions provided by Electron. Then, they can create the index.html they want to show. Last, they should create a new empty folder for their new electron app. And open their command line tool and run npm init from this folder. npm will help them create a package.json file. After creating and initializing main.js, index.html and package.json, they can start the newly written electron program by executing the npm start command in the root directory of the current project.
-
+ ![image](https://github.com/megumigachi/electron/tree/master/%E5%9B%BE%E7%89%87/dev1.png)
 #### `Codeline Organization`
 The codeline organization is the way that the source code is stored in a directory structure, managed via configuration management and how it is built and tested regularly. In an open source project, it is important to organize the source code in a way that everyone can understand it and can edit it.
 The code line organization of Electron is shown in the figure below. Following will be explanation for some parts in the structure.
@@ -212,7 +212,7 @@ spec/
 ```
 automated testing
 There are some other directory such as script, tools, vendor, etc. They have different functions. For example, “tools/” contains the scripts used in gyp files should not be called directly by users.
-
+ ![image](https://github.com/megumigachi/electron/tree/master/%E5%9B%BE%E7%89%87/folder.png)
 #### `Continuous Integration`
 Electron is based on chromium, so a display driver is needed to make it work. If chromium can't find a display driver, Electron fails to start, so no matter how we run it, Electron won't perform any of our tests. When testing Electron   applications based on Travis CI, Circle CI, Jenkins, AppVeyor or similar systems, some configuration is required. Essentially, we need to use a virtual display driver.
  Firstly, install Xvfb. This is a virtual frame buffer, which implements X11 display service protocol. All graphics operations are performed in memory, and do not need to be displayed on any screen output device. 
