--- a/项目中期文件.md
+++ b/项目中期文件.md
@@ -211,7 +211,7 @@ spec/
 ```
 automated testing
 There are some other directory such as script, tools, vendor, etc. They have different functions. For example, “tools/” contains the scripts used in gyp files should not be called directly by users.
- ![image](https://github.com/megumigachi/electron/tree/master/%E5%9B%BE%E7%89%87/folder.png)
+ ![image](https://github.com/megumigachi/electron/tree/master/图片/folder.png)
 #### `Continuous Integration`
 Electron is based on chromium, so a display driver is needed to make it work. If chromium can't find a display driver, Electron fails to start, so no matter how we run it, Electron won't perform any of our tests. When testing Electron   applications based on Travis CI, Circle CI, Jenkins, AppVeyor or similar systems, some configuration is required. Essentially, we need to use a virtual display driver.
  Firstly, install Xvfb. This is a virtual frame buffer, which implements X11 display service protocol. All graphics operations are performed in memory, and do not need to be displayed on any screen output device. 
