--- a/项目中期文件.md
+++ b/项目中期文件.md
@@ -84,7 +84,7 @@ They both have high power and high interest.
 
 ### Context view
 &nbsp;    The diagram below in Figure 1 shows the context view of Electron. The view shows the different relations, dependencies and interactions Electron has with its environment. In this section we will provide some short explanations.
- ![image](https://github.com/megumigachi/electron/tree/master/%E5%9B%BE%E7%89%87/context.png)
+ ![image](https://github.com/megumigachi/electron/blob/master/ppic/context.png)
 Figure 1: Electron context view 
  
 #### `Development tools`
