--- a/项目中期文件.md
+++ b/项目中期文件.md
@@ -182,7 +182,7 @@ $ cd electron-quick-start
 $ npm install && npm start  
 ```
 
-### Deployment
+### Development View
 #### `High-level view`
 Electron apps is developed using JavaScript, and its working principle and method are the same as that of node.js.
 When users want to develop an Electron application, they should write the main.js file with electron module, which contains all the APIs and functions provided by Electron. Then, they can create the index.html they want to show. Last, they should create a new empty folder for their new electron app. And open their command line tool and run npm init from this folder. npm will help them create a package.json file. After creating and initializing main.js, index.html and package.json, they can start the newly written electron program by executing the npm start command in the root directory of the current project.
