--- a/项目中期文件.md
+++ b/项目中期文件.md
@@ -224,3 +224,67 @@ Configuration via WebDriverJs or WebdriverIO. WebDriverJs and WebdriverIO is a n
 Workflow. No need to recompile Electron, just put the source code of app into Electron's resource directory and start testing directly.
 
 
+### Functional View
+The functional view defines the architectural elements that deliver the described system functions. This view records the key runtime functional elements, their responsibilities, interfaces, and major interactions. In electronic projects, different key functional elements interact with internal and external elements at runtime. But these functional elements behave like interfaces because they have well-defined functions that can be called by other elements to perform different operations.
+
+We know electron is a framework, we need to install this library through NPM, and then create its instance project, the official provided us with a quick start.
+
+https://github.com/electron/electron-quick-start
+
+The initialized instance project is like that in the link,we can call it ‘helloworld ‘ in Electron.
+
+Electron core we can divide into two parts, the main process and the rendering process. The main process connects the operating system to the rendering process and can be viewed as a bridge between the page and the computer. The rendering process is now familiar with the front-end environment. It's just the carrier has changed, from the browser to the window. Traditional web environment we can not operate on the user's system. Electron corresponds to the node environment, and we can use all the node apis in the project.
+
+The complete project structure after installing the project dependencies is shown in the following figure:
+
+ ![image](https://github.com/megumigachi/electron/blob/master/ppic/fun1.png)
+
+Node_modules: module dependencies
+Package. json: the file that describes the package, where the main process entry file is configured as main.js by default.
+Main. Js: main process
+Create the mainWindow browser window in the main process and load the index.html home page using the mainwindow.loadurl ("file://${succs name}/index.html"). Use the mainWindow. WebContents. OpenDevTools () to open the developer tools for debugging (this operation is usually released app delete).1, ready: triggered when Electron finishes initialization, the browser window will be created and the main page will be loaded after initialization.2. Window-all-closed: triggered when all browser Windows are closed, it usually exits the application.3, activate: this is triggered when the app is activated, and is typically handled against macOS.Index.html: is a web page that needs to be loaded and displayed using a BrowserWindow, which is in a separate rendering process as the application's UI.
+Renderer. Js: rendering process, its operation is similar to the js operation in web, so it is better to have the basic knowledge of the syntax of node.js, js and es6, so that it can be developed with ease.The project operation process is as follows:When the app starts, execute the code in main.js to create Windows, load pages and so on. The rendering process renderer. Js renders the page, communicates with the main process and transmits data, etc. However, the main process and the rendering process cannot directly access each other, and IPC communication needs to be conducted through ipcMain and ipcRenderer.
+
+The figure shows the functional view.
+ ![image](https://github.com/megumigachi/electron/blob/master/ppic/fun2.png)
+
+### Technical Debt  
+Technical debt reflects on the long-time impacts of trade-offs that are taken during software development between productivity and maintainability. Electron is built on two major upstream projects: Chromium and Node.js. Each of these projects has several of their own dependencies, too. Electron tries its best to use these dependencies exactly as they are but sometimes it can't achieve its goals without patching those upstream dependencies to fit its use cases.
+#### Patch justification
+Every patch in Electron is a maintenance burden. When upstream code changes, patches can break—sometimes without even a patch conflict or a compilation error. It's an ongoing effort to keep our patch set up-to-date and effective. So Electron strives to keep our patch count at a minimum. To that end, every patch must describe its reason for existence in its commit message.
+#### Test Debt
+  Electron has its test method. The goal is to maintain high coverage of electron code. Electron requires that all pull requests not only pass all existing tests, but also add new tests to cover the changed code and new scenarios. Electron need to cover as many code paths and use cases as possible in the electron application to ensure that the applications it publishes have fewer bugs
+  
+### Evolution Perspective
+Electronic version release is quite frequent. Whenever there are important bug fixes in node.js, new API or version update, Electron will release new version.
+#### Edition 1.x
+The electronic version less than 2.0 does not follow the semver specification: the major version corresponds to the change of end-user API, the minor version corresponds to the main version of Chromium, and the patch version will bring new functions and bug fixes. Although it is convenient for developers to merge functions, it brings troubles to developers who are facing client applications QA test cycle of major applications such as Slack, Stride, Teams, Skype, VS Code, Atom and Desktop may be very long, and stability is a very ideal result When trying to absorb bug fixes, the risk of adopting new features is high.
+#### Edition 2.0 and later
+The 1. X strategy listed below has several major changes Each change is to meet the needs and priorities of developers / maintainers and application developers.
+1.Strict use of semver
+2.Introducing semver compliant beta Tags
+3.Import general submission message
+4.Well defined stable branch
+5. master branch has no version information, only the stable branch will contain version information
+From 2.0, electron will follow semver.
+Here is a table that explicitly maps the changed types to their corresponding semver categories (for example, major, minor, patch).
+Major version increment	Minor version increment	Patch version increment
+Electron breakthrough API change	No breakthrough API change for electron	Electron bug fix
+Node.js major version update	Node.js minor version update	Node.js patch version update
+Chromium version update		Fix related chrome patches
+
+### conclusion
+Electron is an open source library developed by GitHub for building cross-platform desktop-applications with HTML, CSS, and JavaScript. Electron accomplishes this by combining Chromiumand Node.js into a single runtime and apps can be packaged for Mac, Windows, and Linux.
+Electron began in 2013 as the framework on which Atom, GitHub's hackable text editor, would be built. The two were open sourced in the Spring of 2014.
+It has since become a popular tool used by open source developers, startups, and established companies. See who is building on Electron.
+Read on to learn more about the contributors and releases of Electron or get started building with Electron in the Quick Start Guide.
+Electron is maintained by a team at GitHub as well as a group of active contributors from the community. Some of the contributors are individuals and some work at larger companies who are developing on Electron. We're happy to add frequent contributors to the project as maintainers. Read more about contributing to Electron.
+Electron releases frequently. We release when there are significant bug fixes, new APIs or are updating versions of Chromium or Node.js.
+Electron's version of Chromium is usually updated within one or two weeks after a new stable Chromium version is released, depending on the effort involved in the upgrade.
+When a new version of Node.js is released, Electron usually waits about a month before upgrading in order to bring in a more stable version.
+In Electron, Node.js and Chromium share a single V8 instance—usually the version that Chromium is using. Most of the time this just works but sometimes it means patching Node.js.
+As of version 2.0 Electron follows semver. For most applications, and using any recent version of npm, running $ npm install electron will do the right thing.
+The version update process is detailed explicitly in our Versioning Doc.
+Long term support of older versions of Electron does not currently exist. If your current version of Electron works for you, you can stay on it for as long as you'd like. If you want to make use of new features as they come in you should upgrade to a newer version.
+A major update came with version v1.0.0. If you're not yet using this version, you should read more about the v1.0.0 changes.
+In order to keep Electron small (file size) and sustainable (the spread of dependencies and APIs) the project limits the scope of the core project.
