--- a/进度日志.md
+++ b/进度日志.md
@@ -2,6 +2,11 @@
 10月3日王鑫 context view
 10月24日杨惊喜 制作ppt 演讲
 10月31日 蔡仁杰 deployment 部分 负责将第一版排版为md
-10月31日黄舜尧 质量分析属性 重置stakeholder
+10月31日 黄舜尧 质量分析属性 重置stakeholder，作图
 10月31日 王鑫 devlopment 第三部分 重制contextview
 10月31日 杨惊喜 development 第一部分最后一部分
+11月20日 黄舜尧 functional 部分 包括作图
+11月20日 王鑫 制作ppt 负责演讲
+11月20日  蔡仁杰 conclusion reference
+11月20日 杨惊喜 technical和evolution
+11月27日 黄舜尧 负责sa最终文档的制作
