--- a/项目中期文件.md
+++ b/项目中期文件.md
@@ -41,11 +41,9 @@ E-mail address: 3514483045@qq.com
 TEL: 18140659189  
 
 
-Wenke Huang  
-studentID: 2017302580159  
-GithHub: WenkeHuang  
-e-mail address: 3514483045@qq.com  
-TEL: 18140659189  
+Renjie Cai  
+studentID: 2017302580119  
+ 
 
 ### Abstract
 &nbsp;    Electron is an open-source framework developed and maintained by GitHub. Electron allows for the development of desktop GUI applications using web technologies: It combines the Chromium rendering engine and the Node.js runtime. Electron is the main GUI framework behind several notable open-source projects including Atom, GitHub Desktop, Light Table, Visual Studio Code, and WordPress Desktop. The fact that the project is under active development can be deduced from the speed at which pull requests are merged. Until 2019-10, it has 22559 commits, 140 branches, 628 releases ,1036 issues, and 889 contributors.
